Add asset-emitter to dependencies to avoid deduplicaiton to old compiler

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@azure-tools/typespec-client-generator-core": "next",
     "@azure-tools/typespec-liftr-base": "0.8.0",
     "@azure/avocado": "^0.9.1",
+    "@typespec/asset-emitter": "next",
     "@typespec/compiler": "next",
     "@typespec/http": "next",
     "@typespec/openapi": "next",
