--- a/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2024-06-15-preview/appconfiguration.json
+++ b/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2024-06-15-preview/appconfiguration.json
@@ -915,7 +915,7 @@
             "name": "keyValueParameters",
             "in": "body",
             "description": "The parameters for creating a key-value.",
-            "required": false,
+            "required": true,
             "schema": {
               "$ref": "#/definitions/KeyValue"
             }
