cspell fixes azure ai projects 1dp

--- a/specification/ai/data-plane/Azure.AI.Projects/preview/2025-05-01-preview/azure-ai-projects-1dp.json
+++ b/specification/ai/data-plane/Azure.AI.Projects/preview/2025-05-01-preview/azure-ai-projects-1dp.json
@@ -1195,7 +1195,7 @@
           {
             "name": "evaluation",
             "in": "body",
-            "description": "Evalution to be run",
+            "description": "Evaluation to be run",
             "required": true,
             "schema": {
               "$ref": "#/definitions/Evaluation"
