--- a/specification/spatio/PlanetaryComputerPro/tspconfig.yaml
+++ b/specification/spatio/PlanetaryComputerPro/tspconfig.yaml
@@ -25,3 +25,10 @@ options:
     partial-update: false
     generate-samples: true
     generate-tests: true
+  # .Net
+"@azure-tools/typespec-csharp":
+    flavor: azure
+    package-dir: "Azure.ResourceManager.Contoso"
+    clear-output-folder: true
+    model-namespace: false
+    namespace: "{package-dir}"
