--- a/specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-01-01/netapp.json
+++ b/specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-01-01/netapp.json
@@ -6085,8 +6085,7 @@
         },
         "name": {
           "description": "The name of the usage.",
-          "readOnly": true,
-          "$ref": "#/definitions/usageName"
+          "$ref": "#/definitions/usageName",
         },
         "type": {
           "description": "The type of the usage.",
@@ -6126,6 +6125,7 @@
     "usageName": {
       "description": "The name of the usage.",
       "type": "object",
+      "readOnly": true,
       "properties": {
         "value": {
           "description": "The name of the usage.",
