--- a/specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-01-01/netapp.json
+++ b/specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-01-01/netapp.json
@@ -6085,7 +6085,7 @@
         },
         "name": {
           "description": "The name of the usage.",
-          "$ref": "#/definitions/usageName",
+          "$ref": "#/definitions/usageName"
         },
         "type": {
           "description": "The type of the usage.",
