--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "azure-rest-api-specs",
   "devDependencies": {
+    "@autorest/openapi-to-typespec": "0.10.12",
+    "@azure-tools/spec-gen-sdk": "^0.3.0",
     "@azure-tools/typespec-apiview": "0.5.1",
     "@azure-tools/typespec-autorest": "0.52.0",
     "@azure-tools/typespec-azure-core": "0.52.0",
@@ -10,9 +12,7 @@
     "@azure-tools/typespec-client-generator-cli": "0.15.3",
     "@azure-tools/typespec-client-generator-core": "0.52.0",
     "@azure-tools/typespec-liftr-base": "0.8.0",
-    "@azure-tools/spec-gen-sdk": "0.2.2",
     "@azure/avocado": "^0.9.1",
-    "@autorest/openapi-to-typespec": "0.10.12",
     "@typespec/compiler": "0.66.0",
     "@typespec/http": "0.66.0",
     "@typespec/openapi": "0.66.0",
