--- a/specification/liftrweightsandbiases/Liftr.WeightsAndBiases.Management/tspconfig.yaml
+++ b/specification/liftrweightsandbiases/Liftr.WeightsAndBiases.Management/tspconfig.yaml
@@ -32,6 +32,16 @@ options:
     generate-fakes: true
     head-as-boolean: true
     inject-spans: true
+  "@azure-tools/typespec-ts":
+    flavor: "azure"
+    isModularLibrary: true
+    hierarchyClient: false
+    experimentalExtensibleEnums: true
+    enableOperationGroup: true
+    generateSample: true
+    package-dir: "arm-weightsandbiases"
+    packageDetails:
+      name: "@azure/arm-weightsandbiases"
 linter:
   extends:
     - "@azure-tools/typespec-azure-rulesets/resource-manager"
