--- a/specification/eventgrid/Azure.Messaging.EventGrid.SystemEvents/tspconfig.yaml
+++ b/specification/eventgrid/Azure.Messaging.EventGrid.SystemEvents/tspconfig.yaml
@@ -45,9 +45,10 @@ options:
     module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
     service-dir: "sdk/messaging/eventgrid"
     package-dir: "azsystemevents"
+    module-version: "0.0.1"
+    emitter-output-dir: "{project-root}"
+    slice-elements-byval: true
     flavor: "azure"
-    generate-fakes: true
-    inject-spans: true
   "@azure-tools/typespec-java":
     emitter-output-dir: "{project-root}"
     namespace: com.azure.messaging.eventgrid
