--- a/specification/liftrarize/ArizeAi.ObservabilityEval.Management/tspconfig.yaml
+++ b/specification/liftrarize/ArizeAi.ObservabilityEval.Management/tspconfig.yaml
@@ -35,7 +35,7 @@ options:
   "@azure-tools/typespec-java":
     service-dir: "sdk/arizeaiobservabilityeval"
     package-dir: "azure-resourcemanager-arizeaiobservabilityeval"
-    namespace: "azure.resourcemanager.arizeaiobservabilityeval"
+    namespace: "com.azure.resourcemanager.arizeaiobservabilityeval"
     service-name: "Arize AI Observability Eval"
     flavor: "azure"
 linter:
