--- a/eng/tools/lint-diff/tsconfig.json
+++ b/eng/tools/lint-diff/tsconfig.json
@@ -2,7 +2,13 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
+    "rootDir": "../../..",
     "noImplicitReturns": true,
     "allowJs": true,
-  }
+  },
+  "include": [
+    "../../../.github/src/*",
+    "**/*"
+  ],
+  "exclude": [ "cmd" ]
 }
