No linting (today)

--- a/.github/workflows/lintdiff-test.yaml
+++ b/.github/workflows/lintdiff-test.yaml
@@ -30,8 +30,8 @@ jobs:
     uses: ./.github/workflows/_reusable-eng-tools-test.yaml
     with:
       package: lint-diff
-      lint: true
-      prettier: true
+      lint: false
+      prettier: false
       sparse-checkout-paths: |
         package.json
         package-lock.json
