--- a/specification/devopsinfrastructure/resource-manager/Microsoft.DevOpsInfrastructure/DevOpsInfrastructure/tspconfig.yaml
+++ b/specification/devopsinfrastructure/resource-manager/Microsoft.DevOpsInfrastructure/DevOpsInfrastructure/tspconfig.yaml
@@ -14,7 +14,7 @@ options:
     azure-resource-provider-folder: "resource-manager"
     arm-types-dir: "{project-root}/../../../../common-types/resource-management"
     emit-common-types-schema: "never"
-    # \`arm-resource-flattening\` is only used for back-compat for specs existed on July 2024. All new service spec should NOT use this flag
+    # `arm-resource-flattening` is only used for back-compat for specs existed on July 2024. All new service spec should NOT use this flag
     arm-resource-flattening: true
     output-file: "{version-status}/{version}/devopsinfrastructure.json"
     omit-unreachable-types: true
