--- a/specification/webpubsub/SignalRService.Management/tspconfig.yaml
+++ b/specification/webpubsub/SignalRService.Management/tspconfig.yaml
@@ -26,7 +26,7 @@ options:
   "@azure-tools/typespec-java":
     package-dir: "azure-resourcemanager-webpubsub"
     namespace: "com.azure.resourcemanager.webpubsub"
-    service-name: "Webpubsub" # human-readable service name, whitespace allowed
+    service-name: "WebPubSub" # human-readable service name, whitespace allowed
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "arm-webpubsub"
