add Go to tspconfig

--- a/specification/ai/DocumentIntelligence/tspconfig.yaml
+++ b/specification/ai/DocumentIntelligence/tspconfig.yaml
@@ -62,3 +62,12 @@ options:
       description: "Document Intelligence Rest Client"
       version: "1.0.0"
     flavor: azure
+  "@azure-tools/typespec-go":
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    service-dir: "sdk/ai/azdocumentintelligence"
+    package-dir: "azdocumentintelligence"
+    module-version: "0.0.1"
+    emitter-output-dir: "{project-root}"
+    slice-elements-byval: true
+    flavor: "azure"
+    
