--- a/specification/ai/Azure.AI.Projects/tspconfig.yaml
+++ b/specification/ai/Azure.AI.Projects/tspconfig.yaml
@@ -20,7 +20,7 @@ options:
     generate-sample: false
   "@typespec/http-client-csharp":
     package-name: Azure.AI.Projects
-    api-version: "2025-05-15-preview"
+    api-version: "v1"
   "@azure-tools/typespec-ts":
     package-dir: "ai-projects"
     api-version: "v1"
