--- a/specification/webpubsub/data-plane/WebPubSub/tspconfig.yaml
+++ b/specification/webpubsub/data-plane/WebPubSub/tspconfig.yaml
@@ -7,7 +7,7 @@ emit:
 options:
   "@azure-tools/typespec-autorest":
     azure-resource-provider-folder: "data-plane"
-    emitter-output-dir: "{project-root}/.."
+    emitter-output-dir: "{project-root}"
     examples-dir: "{project-root}/examples"
     output-file: "{version-status}/{version}/webpubsub.json"
   "@azure-tools/typespec-python":
