--- a/specification/network/resource-manager/Microsoft.Network/stable/2024-10-01/examples/VpnServerConfigurationList.json
+++ b/specification/network/resource-manager/Microsoft.Network/stable/2024-10-01/examples/VpnServerConfigurationList.json
@@ -89,7 +89,7 @@
                   "thumbprint": "83FFBFC8848B5A5836C94D0112367E16148A286F"
                 }
               ],
-              "radiusServerAddress": "8.9.9.9"
+              "radiusServerAddress": "8.9.9.9",
               "radiusServerRootCertificates": [
                 {
                   "name": "vpnServerConfigRadiusServerRootCer1",
