--- a/specification/deviceregistry/DeviceRegistry.Management/examples/2025-10-01/List_NamespaceAssets_ByResourceGroup.json
+++ b/specification/deviceregistry/DeviceRegistry.Management/examples/2025-10-01/List_NamespaceAssets_ByResourceGroup.json
@@ -79,16 +79,21 @@
                   ]
                 }
               ],
-              "events": [
+              "eventGroups": [
                 {
-                  "name": "event1",
-                  "eventNotifier": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt3",
-                  "eventConfiguration": "{\"publishingInterval\":7,\"samplingInterval\":1,\"queueSize\":8}"
-                },
-                {
-                  "name": "event2",
-                  "eventNotifier": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt4",
-                  "eventConfiguration": "{\"publishingInterval\":7,\"samplingInterval\":8,\"queueSize\":4}"
+                  "name": "default",
+                  "events": [
+                    {
+                      "name": "event1",
+                      "dataSource": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt3",
+                      "eventConfiguration": "{\"publishingInterval\":7,\"samplingInterval\":1,\"queueSize\":8}"
+                    },
+                    {
+                      "name": "event2",
+                      "dataSource": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt4",
+                      "eventConfiguration": "{\"publishingInterval\":7,\"samplingInterval\":8,\"queueSize\":4}"
+                    }
+                  ]
                 }
               ],
               "streams": [
