--- a/specification/deviceregistry/resource-manager/Microsoft.DeviceRegistry/stable/2025-10-01/examples/CreateOrReplace_NamespaceAsset.json
+++ b/specification/deviceregistry/resource-manager/Microsoft.DeviceRegistry/stable/2025-10-01/examples/CreateOrReplace_NamespaceAsset.json
@@ -104,59 +104,40 @@
             ]
           }
         ],
-        "events": [
+        "eventGroups": [
           {
-            "name": "event1",
-            "eventNotifier": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt5",
-            "eventConfiguration": "{\"publishingInterval\":7,\"samplingInterval\":1,\"queueSize\":8}",
-            "destinations": [
+            "name": "default",
+            "events": [
               {
-                "target": "Mqtt",
-                "configuration": {
-                  "topic": "/contoso/testEvent1",
-                  "retain": "Keep",
-                  "qos": "Qos0",
-                  "ttl": 7200
-                }
-              }
-            ],
-            "typeRef": "event1Ref",
-            "dataPoints": [
-              {
-                "name": "event1DataPoint1",
-                "dataSource": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt6",
-                "dataPointConfiguration": "{\"publishingInterval\":8,\"samplingInterval\":8,\"queueSize\":4}"
+                "name": "event1",
+                "dataSource": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt5",
+                "eventConfiguration": "{\"publishingInterval\":7,\"samplingInterval\":1,\"queueSize\":8}",
+                "destinations": [
+                  {
+                    "target": "Mqtt",
+                    "configuration": {
+                      "topic": "/contoso/testEvent1",
+                      "retain": "Keep",
+                      "qos": "Qos0",
+                      "ttl": 7200
+                    }
+                  }
+                ],
+                "typeRef": "event1Ref"
               },
               {
-                "name": "event1DataPoint2",
-                "dataSource": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt7",
-                "dataPointConfiguration": "{\"publishingInterval\":8,\"samplingInterval\":8,\"queueSize\":4}"
-              }
-            ]
-          },
-          {
-            "name": "event2",
-            "eventNotifier": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt8",
-            "eventConfiguration": "{\"publishingInterval\":7,\"samplingInterval\":1,\"queueSize\":8}",
-            "destinations": [
-              {
-                "target": "Storage",
-                "configuration": {
-                  "path": "/tmp/event2"
-                }
-              }
-            ],
-            "typeRef": "event2Ref",
-            "dataPoints": [
-              {
-                "name": "event2DataPoint1",
-                "dataSource": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt9",
-                "dataPointConfiguration": "{\"publishingInterval\":8,\"samplingInterval\":8,\"queueSize\":4}"
-              },
-              {
-                "name": "event2DataPoint2",
-                "dataSource": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt10",
-                "dataPointConfiguration": "{\"publishingInterval\":8,\"samplingInterval\":8,\"queueSize\":4}"
+                "name": "event2",
+                "dataSource": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt8",
+                "eventConfiguration": "{\"publishingInterval\":7,\"samplingInterval\":1,\"queueSize\":8}",
+                "destinations": [
+                  {
+                    "target": "Storage",
+                    "configuration": {
+                      "path": "/tmp/event2"
+                    }
+                  }
+                ],
+                "typeRef": "event2Ref"
               }
             ]
           }
@@ -337,59 +318,40 @@
               ]
             }
           ],
-          "events": [
+          "eventGroups": [
             {
-              "name": "event1",
-              "eventNotifier": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt3",
-              "eventConfiguration": "{\"publishingInterval\":7,\"samplingInterval\":1,\"queueSize\":8}",
-              "destinations": [
+              "name": "default",
+              "events": [
                 {
-                  "target": "Mqtt",
-                  "configuration": {
-                    "topic": "/contoso/testEvent1",
-                    "retain": "Keep",
-                    "qos": "Qos0",
-                    "ttl": 7200
-                  }
-                }
-              ],
-              "typeRef": "event1Ref",
-              "dataPoints": [
-                {
-                  "name": "event1DataPoint1",
-                  "dataSource": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt5",
-                  "dataPointConfiguration": "{\"publishingInterval\":8,\"samplingInterval\":8,\"queueSize\":4}"
+                  "name": "event1",
+                  "dataSource": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt3",
+                  "eventConfiguration": "{\"publishingInterval\":7,\"samplingInterval\":1,\"queueSize\":8}",
+                  "destinations": [
+                    {
+                      "target": "Mqtt",
+                      "configuration": {
+                        "topic": "/contoso/testEvent1",
+                        "retain": "Keep",
+                        "qos": "Qos0",
+                        "ttl": 7200
+                      }
+                    }
+                  ],
+                  "typeRef": "event1Ref"
                 },
                 {
-                  "name": "event1DataPoint2",
-                  "dataSource": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt6",
-                  "dataPointConfiguration": "{\"publishingInterval\":8,\"samplingInterval\":8,\"queueSize\":4}"
-                }
-              ]
-            },
-            {
-              "name": "event2",
-              "eventNotifier": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt7",
-              "eventConfiguration": "{\"publishingInterval\":7,\"samplingInterval\":1,\"queueSize\":8}",
-              "destinations": [
-                {
-                  "target": "Storage",
-                  "configuration": {
-                    "path": "/tmp/event2"
-                  }
-                }
-              ],
-              "typeRef": "event2Ref",
-              "dataPoints": [
-                {
-                  "name": "event2DataPoint1",
-                  "dataSource": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt8",
-                  "dataPointConfiguration": "{\"publishingInterval\":8,\"samplingInterval\":8,\"queueSize\":4}"
-                },
-                {
-                  "name": "event2DataPoint2",
-                  "dataSource": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt9",
-                  "dataPointConfiguration": "{\"publishingInterval\":8,\"samplingInterval\":8,\"queueSize\":4}"
+                  "name": "event2",
+                  "dataSource": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt7",
+                  "eventConfiguration": "{\"publishingInterval\":7,\"samplingInterval\":1,\"queueSize\":8}",
+                  "destinations": [
+                    {
+                      "target": "Storage",
+                      "configuration": {
+                        "path": "/tmp/event2"
+                      }
+                    }
+                  ],
+                  "typeRef": "event2Ref"
                 }
               ]
             }
@@ -714,59 +676,40 @@
               ]
             }
           ],
-          "events": [
+          "eventGroups": [
             {
-              "name": "event1",
-              "eventNotifier": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt3",
-              "eventConfiguration": "{\"publishingInterval\":7,\"samplingInterval\":1,\"queueSize\":8}",
-              "destinations": [
+              "name": "default",
+              "events": [
                 {
-                  "target": "Mqtt",
-                  "configuration": {
-                    "topic": "/contoso/testEvent1",
-                    "retain": "Keep",
-                    "qos": "Qos0",
-                    "ttl": 7200
-                  }
-                }
-              ],
-              "typeRef": "event1Ref",
-              "dataPoints": [
-                {
-                  "name": "event1DataPoint1",
-                  "dataSource": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt5",
-                  "dataPointConfiguration": "{\"publishingInterval\":8,\"samplingInterval\":8,\"queueSize\":4}"
+                  "name": "event1",
+                  "dataSource": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt3",
+                  "eventConfiguration": "{\"publishingInterval\":7,\"samplingInterval\":1,\"queueSize\":8}",
+                  "destinations": [
+                    {
+                      "target": "Mqtt",
+                      "configuration": {
+                        "topic": "/contoso/testEvent1",
+                        "retain": "Keep",
+                        "qos": "Qos0",
+                        "ttl": 7200
+                      }
+                    }
+                  ],
+                  "typeRef": "event1Ref"
                 },
                 {
-                  "name": "event1DataPoint2",
-                  "dataSource": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt6",
-                  "dataPointConfiguration": "{\"publishingInterval\":8,\"samplingInterval\":8,\"queueSize\":4}"
-                }
-              ]
-            },
-            {
-              "name": "event2",
-              "eventNotifier": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt7",
-              "eventConfiguration": "{\"publishingInterval\":7,\"samplingInterval\":1,\"queueSize\":8}",
-              "destinations": [
-                {
-                  "target": "Storage",
-                  "configuration": {
-                    "path": "/tmp/event2"
-                  }
-                }
-              ],
-              "typeRef": "event2Ref",
-              "dataPoints": [
-                {
-                  "name": "event2DataPoint1",
+                  "name": "event2",
                   "dataSource": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt8",
-                  "dataPointConfiguration": "{\"publishingInterval\":8,\"samplingInterval\":8,\"queueSize\":4}"
-                },
-                {
-                  "name": "event2DataPoint2",
-                  "dataSource": "nsu=http://microsoft.com/Opc/OpcPlc/;s=FastUInt9",
-                  "dataPointConfiguration": "{\"publishingInterval\":8,\"samplingInterval\":8,\"queueSize\":4}"
+                  "eventConfiguration": "{\"publishingInterval\":7,\"samplingInterval\":1,\"queueSize\":8}",
+                  "destinations": [
+                    {
+                      "target": "Storage",
+                      "configuration": {
+                        "path": "/tmp/event2"
+                      }
+                    }
+                  ],
+                  "typeRef": "event2Ref"
                 }
               ]
             }
