--- a/specification/app/resource-manager/Microsoft.App/stable/2025-07-01/ManagedEnvironmentsHttpRouteConfig.json
+++ b/specification/app/resource-manager/Microsoft.App/stable/2025-07-01/ManagedEnvironmentsHttpRouteConfig.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "version": "2025-02-02-preview",
+    "version": "2025-07-01",
     "title": "ContainerApps API Client"
   },
   "host": "management.azure.com",
