--- a/specification/app/resource-manager/Microsoft.App/stable/2025-07-01/examples/HttpRouteConfig_Patch.json
+++ b/specification/app/resource-manager/Microsoft.App/stable/2025-07-01/examples/HttpRouteConfig_Patch.json
@@ -19,8 +19,7 @@
             "targets": [
               {
                 "containerApp": "capp-1",
-                "revision": "rev-1",
-                "weight": 100
+                "revision": "capp-1--0000001"
               }
             ],
             "routes": [
@@ -61,8 +60,7 @@
               "targets": [
                 {
                   "containerApp": "capp-1",
-                  "revision": "rev-1",
-                  "weight": 100
+                  "revision": "capp-1--0000001"
                 }
               ],
               "routes": [
