--- a/specification/webpubsub/data-plane/WebPubSub/tspconfig.yaml
+++ b/specification/webpubsub/data-plane/WebPubSub/tspconfig.yaml
@@ -7,9 +7,9 @@ emit:
 options:
   "@azure-tools/typespec-autorest":
     azure-resource-provider-folder: "data-plane"
-    emitter-output-dir: "{project-root}/.."
+    emitter-output-dir: "{project-root}"
     examples-dir: "{project-root}/examples"
-    output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/webpubsub.json"
+    output-file: "{version-status}/{version}/webpubsub.json"
   "@azure-tools/typespec-python":
     package-dir: "azure-messaging-webpubsubservice"
     package-name: "azure-messaging-webpubsubservice"
