Mark delete as long-running

--- a/specification/app/resource-manager/Microsoft.App/preview/2025-02-02-preview/ManagedEnvironmentsHttpRouteConfig.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2025-02-02-preview/ManagedEnvironmentsHttpRouteConfig.json
@@ -225,7 +225,8 @@
           "Delete a Http Route Config": {
             "$ref": "./examples/HttpRouteConfig_Delete.json"
           }
-        }
+        },
+        "x-ms-long-running-operation": true
       }
     },
     "/subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Microsoft.App/managedEnvironments/{environmentName}/httpRouteConfigs": {
