Include location header

--- a/specification/app/resource-manager/Microsoft.App/preview/2025-02-02-preview/ManagedEnvironmentsHttpRouteConfig.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2025-02-02-preview/ManagedEnvironmentsHttpRouteConfig.json
@@ -209,7 +209,12 @@
         ],
         "responses": {
           "202": {
-            "description": "Delete operation is in progress"
+            "description": "Delete operation is in progress",
+            "headers": {
+              "Location": {
+                "type": "string"
+              }
+            }
           },
           "204": {
             "description": "Http Route does not exist"
