fix validation checks

--- a/specification/app/resource-manager/Microsoft.App/preview/2025-02-02-preview/ManagedEnvironmentsHttpRouteConfig.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2025-02-02-preview/ManagedEnvironmentsHttpRouteConfig.json
@@ -211,7 +211,7 @@
           "202": {
             "description": "Delete operation is in progress",
             "headers": {
-              "Location": {
+              "location": {
                 "type": "string"
               }
             }
@@ -222,7 +222,7 @@
           "default": {
             "description": "Error response.",
             "schema": {
-              "$ref": "./CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../../../common-types/resource-management/v5/types.json#/definitions/ErrorResponse"
             }
           }
         },
