--- a/specification/recoveryservices/resource-manager/Microsoft.RecoveryServices/RecoveryServices/tspconfig.yaml
+++ b/specification/recoveryservices/resource-manager/Microsoft.RecoveryServices/RecoveryServices/tspconfig.yaml
@@ -7,7 +7,7 @@ options:
   "@azure-tools/typespec-autorest":
     omit-unreachable-types: true
     emitter-output-dir: "{project-root}"
-    output-file: "{version-status}/{version}/recoveryservices.json"
+    output-file: "{version-status}/{version}/openapi.json"
     azure-resource-provider-folder: "resource-manager"
     arm-types-dir: "{project-root}/../../../../common-types/resource-management"
     examples-dir: "{project-root}/examples"
@@ -26,7 +26,7 @@ options:
   "@azure-tools/typespec-java":
     package-dir: "azure-resourcemanager-recoveryservices"
     namespace: "com.azure.resourcemanager.recoveryservices"
-    service-name: "RecoveryServices"
+    service-name: "RecoveryServices" # human-readable service name, whitespace allowed
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "arm-recoveryservices"
