--- a/specification/suppressions.yaml
+++ b/specification/suppressions.yaml
@@ -772,7 +772,7 @@
     - options.@azure-tools/typespec-ts.*
     - parameters.service-dir.default
   paths:
-    - manufacturingplatform/Manufacturingplatform.Management/tspconfig.yaml
+    - manufacturingplatform/resource-manager/Microsoft.ManufacturingPlatform/ManufacturingPlatform/tspconfig.yaml
 
 - tool: TypeSpecValidation
   reason: Suppress until spec can be updated
