--- a/specification/relationships/resource-manager/Microsoft.Relationships/Relationships/tspconfig.yaml
+++ b/specification/relationships/resource-manager/Microsoft.Relationships/Relationships/tspconfig.yaml
@@ -5,9 +5,10 @@ parameters:
     default: "sdk/relationships"
 options:
   "@azure-tools/typespec-autorest":
-    emitter-output-dir: "{project-root}/.."
+    emitter-output-dir: "{project-root}"
     azure-resource-provider-folder: "resource-manager"
-    output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/relationships.json"
+    output-file: "{version-status}/{version}/relationships.json"
+    arm-types-dir: "{project-root}/../../../../common-types/resource-management"
     use-read-only-status-schema: true
   "@azure-tools/typespec-csharp":
     flavor: azure
