--- a/specification/suppressions.yaml
+++ b/specification/suppressions.yaml
@@ -987,7 +987,7 @@
   sub-rules:
     - parameters.service-dir.default
   paths:
-    - relationships/Relationships.Management/tspconfig.yaml
+    - relationships/resource-manager/Microsoft.Relationships/Relationships/tspconfig.yaml
 
 - tool: TypeSpecValidation
   reason: Suppress until spec can be updated
