Update tspconfig.yaml for Java

--- a/specification/redis/Cache.Management/tspconfig.yaml
+++ b/specification/redis/Cache.Management/tspconfig.yaml
@@ -26,6 +26,9 @@ options:
     package-dir: "azure-resourcemanager-redislibrary"
     namespace: "com.azure.resourcemanager.redislibrary"
     service-name: "Redis" # human-readable service name, whitespace allowed
+    premium: true
+    service-dir: "sdk/resourcemanager"
+    enable-sync-stack: false
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "arm-rediscache"
