--- a/specification/redis/Cache.Management/tspconfig.yaml
+++ b/specification/redis/Cache.Management/tspconfig.yaml
@@ -23,8 +23,8 @@ options:
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-java":
-    package-dir: "azure-resourcemanager-redislibrary"
-    namespace: "com.azure.resourcemanager.redislibrary"
+    package-dir: "azure-resourcemanager-redis"
+    namespace: "com.azure.resourcemanager.redis"
     service-name: "Redis" # human-readable service name, whitespace allowed
     premium: true
     service-dir: "sdk/resourcemanager"
